--- a/src/App.css
+++ b/src/App.css
@@ -35,12 +35,12 @@ body {
 
 .square {
   width: 80px;
-  height: 80px; 
+  height: 80px;
   margin: 2px;
   border-radius: 10px;
 }
 .square:nth-child(6){
-	
+
 }
 .list {
   list-style: none;
@@ -48,7 +48,7 @@ body {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  
+
 }
 
 .list:hover .square:nth-child(6){
@@ -69,7 +69,19 @@ body {
 	}
 }
 
+.navbar_left {
+  width: 96% ! important;
+}
 
+.headerMargin {
+  margin-bottom: -25px !important;
+  height: 48px !important;
+  border-bottom: 1.2px solid lightgrey;
+}
+
+.col-padding{
+  padding: 0px !important;
+}
 
 
 
